--- a/about.html
+++ b/about.html
@@ -5,14 +5,15 @@
   <meta charset="utf-8">
 
   <title>Sprint Challenge - About</title>
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css" integrity="sha256-a2tobsqlbgLsWs7ZVUGgP5IvWZsx8bTNQpzsqCSm5mk=" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
 </head>
 
 <section class=nav-bar>
-  <nav>
+  <nav class="animated bounceInDown">
       <img src="C:\Users\alanp\OneDrive\Desktop\Lambdastuff\Sprint-Challenge--User-Interface\img/lambda-black.png" alt="">
           <a href="#">Home</a>
           <a href="file:///C:/Users/alanp/OneDrive/Desktop/Lambdastuff/Sprint-Challenge--User-Interface/about.html
@@ -28,11 +29,12 @@
   <img class=img1 src="C:\Users\alanp\OneDrive\Desktop\Lambdastuff\Sprint-Challenge--User-Interface\img/jumbo-about.png">
 </section>
 
+
 <body>
     <div class="container about-page">
       <div class="aboutp">
  <div class="abouttext">
-  <h2>  About</h2>
+  <h2> About </h2>
 <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
 </p>
  </div>
@@ -41,7 +43,7 @@
 <Section class="aboutpics1">
   <div>  
     <img src="img/about-plan.png" alt="strategy">
-    <h2>Strategy</h2>
+    <h2 class=animatedinfinitebouncedelay-2s>Strategy</h2>
     <p>    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
       
     </p>
